target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'while'", "'void'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "','", "';'", "':'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'='", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADD", "SUB", "MUL", "DIV", "REMAINDER", 
                      "BOOL_NEGA", "BOOL_CONJ", "BOOL_DISJ", "EQUAL", "NOT_EQUAL", 
                      "LESS_THAN", "GREATER_THAN", "LESS_THAN_EQ", "GREATER_THAN_EQ", 
                      "DOUBLE_COLON", "COMMA", "SEMI", "COLON", "LCB", "RCB", 
                      "LB", "RB", "LSB", "RSB", "EQ", "DOT", "INTLIT", "FLOATLIT", 
                      "BOOLLIT", "TRUE", "FALSE", "STRINGLIT", "ID", "WS", 
                      "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardecl_short_form = 4
    RULE_vardecl_full_form = 5
    RULE_var_recur = 6
    RULE_vardecl_array_short = 7
    RULE_vardecl_array_full = 8
    RULE_varecur_array = 9
    RULE_dimension = 10
    RULE_array_value_list = 11
    RULE_array_value_prime = 12
    RULE_array_value = 13
    RULE_paramlist = 14
    RULE_paramprime = 15
    RULE_paramdecl = 16
    RULE_funcdecl = 17
    RULE_func_head = 18
    RULE_func_body = 19
    RULE_element_type = 20
    RULE_var_type = 21
    RULE_return_type = 22
    RULE_array_type = 23
    RULE_idlist = 24
    RULE_intlist = 25
    RULE_exprlist = 26
    RULE_expr = 27
    RULE_expr1 = 28
    RULE_expr2 = 29
    RULE_expr3 = 30
    RULE_expr4 = 31
    RULE_expr5 = 32
    RULE_expr6 = 33
    RULE_expr7 = 34
    RULE_relational = 35
    RULE_indexOperator = 36
    RULE_allLiterals = 37
    RULE_funcCall = 38
    RULE_argulist = 39
    RULE_arguprime = 40
    RULE_argu = 41
    RULE_operands = 42
    RULE_array_lit = 43
    RULE_stmtlist = 44
    RULE_stmt = 45
    RULE_body_stmt = 46
    RULE_boolean_exprlist = 47
    RULE_assign_stmt = 48
    RULE_if_stmt = 49
    RULE_for_stmt = 50
    RULE_update_expr = 51
    RULE_init_var = 52
    RULE_while_stmt = 53
    RULE_dowhile_stmt = 54
    RULE_break_stmt = 55
    RULE_continue_stmt = 56
    RULE_return_stmt = 57
    RULE_call_stmt = 58
    RULE_callElementList = 59
    RULE_callElementPrime = 60
    RULE_block_stmt = 61
    RULE_blocklist = 62
    RULE_block_prime = 63
    RULE_block = 64

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "vardecl_short_form", 
                   "vardecl_full_form", "var_recur", "vardecl_array_short", 
                   "vardecl_array_full", "varecur_array", "dimension", "array_value_list", 
                   "array_value_prime", "array_value", "paramlist", "paramprime", 
                   "paramdecl", "funcdecl", "func_head", "func_body", "element_type", 
                   "var_type", "return_type", "array_type", "idlist", "intlist", 
                   "exprlist", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "relational", "indexOperator", 
                   "allLiterals", "funcCall", "argulist", "arguprime", "argu", 
                   "operands", "array_lit", "stmtlist", "stmt", "body_stmt", 
                   "boolean_exprlist", "assign_stmt", "if_stmt", "for_stmt", 
                   "update_expr", "init_var", "while_stmt", "dowhile_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "call_stmt", 
                   "callElementList", "callElementPrime", "block_stmt", 
                   "blocklist", "block_prime", "block" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FLOAT=6
    FOR=7
    FUNCTION=8
    IF=9
    INTEGER=10
    RETURN=11
    STRING=12
    WHILE=13
    VOID=14
    OUT=15
    CONTINUE=16
    OF=17
    INHERIT=18
    ARRAY=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    REMAINDER=24
    BOOL_NEGA=25
    BOOL_CONJ=26
    BOOL_DISJ=27
    EQUAL=28
    NOT_EQUAL=29
    LESS_THAN=30
    GREATER_THAN=31
    LESS_THAN_EQ=32
    GREATER_THAN_EQ=33
    DOUBLE_COLON=34
    COMMA=35
    SEMI=36
    COLON=37
    LCB=38
    RCB=39
    LB=40
    RB=41
    LSB=42
    RSB=43
    EQ=44
    DOT=45
    INTLIT=46
    FLOATLIT=47
    BOOLLIT=48
    TRUE=49
    FALSE=50
    STRINGLIT=51
    ID=52
    WS=53
    SINGLE_LINE_COMMENT=54
    MULTI_LINE_COMMENT=55
    ERROR_CHAR=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.decllist()
            self.state = 131
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.decl()
                self.state = 134
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl_short_form(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_short_formContext,0)


        def vardecl_full_form(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_full_formContext,0)


        def vardecl_array_full(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_array_fullContext,0)


        def vardecl_array_short(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_array_shortContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.vardecl_short_form()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.vardecl_full_form()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.vardecl_array_full()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.vardecl_array_short()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_short_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_short_form

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_short_form" ):
                return visitor.visitVardecl_short_form(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_short_form(self):

        localctx = MT22Parser.Vardecl_short_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_short_form)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.idlist()
            self.state = 150
            self.match(MT22Parser.COLON)
            self.state = 151
            self.var_type()
            self.state = 152
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_full_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def var_recur(self):
            return self.getTypedRuleContext(MT22Parser.Var_recurContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_full_form

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_full_form" ):
                return visitor.visitVardecl_full_form(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_full_form(self):

        localctx = MT22Parser.Vardecl_full_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_full_form)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(MT22Parser.ID)
            self.state = 155
            self.var_recur()
            self.state = 156
            self.expr()
            self.state = 157
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_recurContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def var_recur(self):
            return self.getTypedRuleContext(MT22Parser.Var_recurContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_recur

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_recur" ):
                return visitor.visitVar_recur(self)
            else:
                return visitor.visitChildren(self)




    def var_recur(self):

        localctx = MT22Parser.Var_recurContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_recur)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(MT22Parser.COLON)
                self.state = 160
                self.var_type()
                self.state = 161
                self.match(MT22Parser.EQ)
                pass
            elif token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(MT22Parser.COMMA)
                self.state = 164
                self.match(MT22Parser.ID)
                self.state = 165
                self.var_recur()
                self.state = 166
                self.expr()
                self.state = 167
                self.match(MT22Parser.COMMA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_array_shortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_array_short

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_array_short" ):
                return visitor.visitVardecl_array_short(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_array_short(self):

        localctx = MT22Parser.Vardecl_array_shortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl_array_short)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.idlist()
            self.state = 172
            self.match(MT22Parser.COLON)
            self.state = 173
            self.array_type()
            self.state = 174
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_array_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def varecur_array(self):
            return self.getTypedRuleContext(MT22Parser.Varecur_arrayContext,0)


        def array_value_list(self):
            return self.getTypedRuleContext(MT22Parser.Array_value_listContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_array_full

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_array_full" ):
                return visitor.visitVardecl_array_full(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_array_full(self):

        localctx = MT22Parser.Vardecl_array_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardecl_array_full)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(MT22Parser.ID)
            self.state = 177
            self.varecur_array()
            self.state = 178
            self.array_value_list()
            self.state = 179
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Varecur_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def varecur_array(self):
            return self.getTypedRuleContext(MT22Parser.Varecur_arrayContext,0)


        def array_value_list(self):
            return self.getTypedRuleContext(MT22Parser.Array_value_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varecur_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarecur_array" ):
                return visitor.visitVarecur_array(self)
            else:
                return visitor.visitChildren(self)




    def varecur_array(self):

        localctx = MT22Parser.Varecur_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varecur_array)
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(MT22Parser.COLON)
                self.state = 182
                self.array_type()
                self.state = 183
                self.match(MT22Parser.EQ)
                pass
            elif token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.match(MT22Parser.COMMA)
                self.state = 186
                self.match(MT22Parser.ID)
                self.state = 187
                self.varecur_array()
                self.state = 188
                self.array_value_list()
                self.state = 189
                self.match(MT22Parser.COMMA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(MT22Parser.LSB)
            self.state = 194
            self.intlist()
            self.state = 195
            self.match(MT22Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_value_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def array_value_prime(self):
            return self.getTypedRuleContext(MT22Parser.Array_value_primeContext,0)


        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_value_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_value_list" ):
                return visitor.visitArray_value_list(self)
            else:
                return visitor.visitChildren(self)




    def array_value_list(self):
